# Karma

./: .gitignore  Makefile  README.md  README_CN.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: karma.desktop
src-tauri/sidecar-src/: pyproject.toml  pyproject_onnx.toml
src-tauri/sidecar-src/opf_common/: __init__.py  ipc.py  types.py
src-tauri/sidecar-src/opf_mlx/: __init__.py  __main__.py  config.py  ipc.py  redactor.py
src-tauri/sidecar-src/opf_onnx/: __init__.py  __main__.py  redactor.py
src-tauri/src/: lib.rs  main.rs  settings.rs  shortcut.rs
src-tauri/src/commands/: history.rs  mod.rs  model.rs  redact.rs  server.rs  settings.rs
src-tauri/src/managers/: history.rs  mod.rs  model.rs  server_state.rs  sidecar.rs
src-tauri/src/server/: routes.rs  schemas.rs
src/components/: Sidebar.tsx
src/components/about-page/: AboutPage.tsx
src/components/footer/: Footer.tsx
src/components/history-page/: HistoryPage.tsx
src/components/icons/: KarmaLogo.tsx
src/components/model-page/: ModelPage.tsx
src/components/redactor/: RedactorPage.tsx  SpanBadge.tsx
src/components/server-page/: ServerPage.tsx
src/components/settings/: SettingsPage.tsx  ShortcutInput.tsx
src/components/ui/: Button.tsx  Dropdown.tsx  Input.tsx  (+5 more)
src/hooks/: useClipboard.ts  useOsType.ts  useSettings.ts
src/i18n/: index.ts
src/lib/: types.ts
src/stores/: settingsStore.ts
(+3 files in other folders)
