[package]
name = "karma"
version = "0.1.0"
description = "PII Detection & Redaction"
authors = ["chen"]
edition = "2021"
license = "MIT"
default-run = "karma"

[profile.dev]
incremental = true

[lib]
name = "karma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# API server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Utils
anyhow = "1"
log = "0.4"
chrono = "0.4"
opener = "0.7"
rusqlite = { version = "0.37", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
