[project]
name = "opf-privacy-filter-mlx"
version = "0.1.0"
description = "PII detection and redaction on Apple Silicon via MLX"
requires-python = ">=3.11"
dependencies = [
    "mlx-embeddings",
    "pyinstaller",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opf_mlx"]

[tool.uv.sources]
mlx-embeddings = { git = "https://github.com/Blaizzy/mlx-embeddings.git" }
